# phillip

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
phillip/: build.py  byte_array.py  generate.py  module_generator.py  sized_array.py  structure_generator.py  typemap.py  util.py
phillip/data/templates/: header_template.hpp  module_template.cpp  render_structure.cpp  sizeof_program.cpp
tests/: test_byte_array.py  test_module_generator.py  test_phillip.py  test_sized_array.py  test_structure_generator.py
